2013-02-16  Glenn Morris  <rgm@gnu.org>

	* image.el (image-nth-frame): New, split from image-animate-timeout.
	(image-animate-timeout): Use image-nth-frame.
	* image-mode.el (image-goto-frame, image-next-frame)
	(image-previous-frame): New commands.
	(image-mode-map): Add new frame commands.

2013-02-16  Jonas Bernoulli  <jonas@bernoul.li>

	* emacs-lisp/tabulated-list.el (tabulated-list-print-col):
	If col-desc already has help-echo, use it.  (Bug#13563)

2013-02-16  Glenn Morris  <rgm@gnu.org>

	* image.el (image-current-frame): New variable.
	(image-animate-timeout): Set image-current-frame.
	* image-mode.el (image-mode): For animated images,
	display a frame counter via mode-line-process.

	* font-lock.el (lisp-font-lock-keywords-1): Add defvar-local.

2013-02-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (eval-expression): Let `exp' set the mark (bug#13724).

2013-02-15  Alan Mackenzie  <acm@muc.de>

	* emacs-lisp/easy-mmode.el (define-globalized-minor-mode): When a
	global minor mode has been enabled, call the minor mode function
	for a new buffer once only, after the major mode hook, whilst
	allowing that hook explicitly to disable the minor mode.
	(MODE-disable-in-buffer): New (generated) function.
	(disable-MODE): New (generated) buffer local variable.

2013-02-15  Jambunathan K  <kjambunathan@gmail.com>

	* iswitchb.el (iswitchb-read-buffer): Bind `C-.' and `C-,' to
	`iswitchb-next-match' and `iswitchb-prev-match' resply.
	* ido.el (ido-init-completion-maps): Bind `C-.' and `C-,' to
	`ido-next-match' and `ido-prev-match' resply.
	* icomplete.el (icomplete-minibuffer-map): Unbind `C-s' and `C-r'.
	Bind `C-.' and `C-,' to `icomplete-forward-completions' and
	`icomplete-backward-completions' (Bug#13708).

2013-02-15  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/easy-mmode.el (define-minor-mode): Doc fix.

2013-02-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/goto-addr.el (goto-address-fontify): Add start and end args.